--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -124,7 +124,7 @@
             <br>
             <input required style="padding-top: 40px" type="text" size="50px" class="text-line" placeholder="Full Name: "/><br>
             <input required style="padding-top: 30px" type="tel" size="50px" class="text-line" placeholder="Mobile Number: "/><br>
-            <input required style="padding-top: 30px" type="email" size="50px" class="text-line" placeholder="Email Address: "/>
+            <input required style="padding-top: 30px" type="email" size="50px" class="text-line" placeholder="Email Address: "/><br><br>
             <input style="padding-top: 60px" type="text" size="50px" class="text-line" placeholder="Type your message here "/>
 
             <div style="padding-top: 50px">
